--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Custom Calendar</string>
+    <string name="picker_today">Today</string>
+    <string name="cancel">Cancel</string>
+    <string name="apply">Apply</string>
 </resources>
