--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TaskDemo</string>
+    <string name="iq3">IQ3</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="money">33.000 VND</string>
 </resources>
