--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">TaskDemo</string>
     <string name="iq3">IQ3</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="money">33.000 VND</string>
+    <string name="title">Full HD video resolution\n3-day event-based cloud video storage\nAl feature (human detection)\nNo-cost maintenance and 24/7 support services</string>
 </resources>
