--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="iq3">IQ3</string>
     <string name="contact_us">Contact Us</string>
     <string name="money">33.000 VND</string>
+    <string name="title">Full HD video resolution\n3-day event-based cloud video storage\nAl feature (human detection)\nNo-cost maintenance and 24/7 support services</string>
 </resources>
