type in adapter

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="contact_us">Contact Us</string>
     <string name="money">33.000 VND</string>
     <string name="title">Full HD video resolution\n3-day event-based cloud video storage\nAl feature (human detection)\nNo-cost maintenance and 24/7 support services</string>
+    <string name="text_choose">What would you \nlike to choose?</string>
 </resources>
