--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Call Api</string>
+  <string name="app_name">Call Api</string>
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="movie_name">movieName</string>
+  <string name="textview">TextView</string>
+  <string name="date_release">Date Release</string>
 </resources>
