--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
   <string name="runtime">Thời gian chiếu: </string>
   <string name="rating">Đánh giá: </string>
   <string name="release_date">Ngày khởi chiếu: </string>
+  <string name="list_empty">Danh sách trống!</string>
 </resources>
